fix: fix pixelperfect shift in page-news section

--- a/src/scss/artist/artist-description.scss
+++ b/src/scss/artist/artist-description.scss
@@ -14,12 +14,16 @@
     text-align: left;
   }
 
+  h1 {
+    @include mixins.reset;
+  }
+
   .action-buttons {
     @include mixins.flex(row, flex-start, center);
     gap: 1.5rem;
     flex-wrap: wrap;
 
-    margin-top: 48px;
+    margin-top: 32px;
 
     .btn {
       @include mixins.flex(row, flex-start, center);
